Updated regions URL in map.html to https://okclm.github.io/TLD-Map-Client/wwwroot/regions-to-mapURL.json

--- a/wwwroot/map.html
+++ b/wwwroot/map.html
@@ -64,7 +64,8 @@
   <script>
     // === CONFIG ===
     const SERVER_URL = 'http://localhost:8080';
-    const REGIONS_JSON_URL = 'https://raw.githubusercontent.com/okclm/TLD-Map-Client/main/regions-to-mapURL.json';
+    //const REGIONS_JSON_URL = 'https://raw.githubusercontent.com/okclm/TLD-Map-Client/main/regions-to-mapURL.json';
+      const REGIONS_JSON_URL = 'https://okclm.github.io/TLD-Map-Client/wwwroot/regions-to-mapURL.json';
     const POIS_BASE_URL = 'https://raw.githubusercontent.com/okclm/TLD-Map-Client/main/pois/';
 
     let currentScene = null;
