--- a/wwwroot/map.html
+++ b/wwwroot/map.html
@@ -1,186 +1,203 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>TLD Dynamic Map</title>
-  <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-      overflow: hidden;
-      font-family: Arial, Helvetica, sans-serif;
-      background: #111;
-      color: #eee;
-    }
-    #map-container {
-      width: 100vw;
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background: #000;
-    }
-    #map-svg {
-      max-width: 100%;
-      max-height: 100%;
-      object-fit: contain;
-    }
-    .poi {
-      cursor: pointer;
-      fill: #ff4444;
-      stroke: white;
-      stroke-width: 1.5;
-      opacity: 0.85;
-    }
-    .poi:hover {
-      fill: #ff7777;
-      opacity: 1;
-    }
-    #status {
-      position: absolute;
-      top: 10px;
-      left: 10px;
-      background: rgba(0,0,0,0.7);
-      color: white;
-      padding: 10px 15px;
-      border-radius: 6px;
-      font-size: 14px;
-      z-index: 10;
-      max-width: 400px;
-    }
-  </style>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>TLD Dynamic Map</title>
+    <style>
+        html, body {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            overflow: hidden;
+            font-family: Arial, Helvetica, sans-serif;
+            background: #111;
+            color: #eee;
+        }
+
+        #map-container {
+            width: 100vw;
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background: #000;
+        }
+
+        #map-svg {
+            max-width: 100%;
+            max-height: 100%;
+            object-fit: contain;
+        }
+
+        .poi {
+            cursor: pointer;
+            fill: #ff4444;
+            stroke: white;
+            stroke-width: 1.5;
+            opacity: 0.85;
+        }
+
+            .poi:hover {
+                fill: #ff7777;
+                opacity: 1;
+            }
+
+        #status {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            background: rgba(0,0,0,0.7);
+            color: white;
+            padding: 10px 15px;
+            border-radius: 6px;
+            font-size: 14px;
+            z-index: 10;
+            max-width: 400px;
+            pointer-events: none;
+        }
+    </style>
 </head>
 <body>
-  <div id="status">Loading map from game...</div>
+    <div id="status">Loading map from game...</div>
 
-  <div id="map-container">
-    <svg id="map-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1920 1080">
-      <!-- Map image and POIs will be dynamically inserted here -->
-    </svg>
-  </div>
+    <div id="map-container">
+        <svg id="map-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1920 1080">
+            <!-- Map image and POIs will be dynamically inserted here -->
+        </svg>
+    </div>
 
-  <script>
-    // === CONFIG ===
-    const SERVER_URL = 'http://localhost:8080';
-    //const REGIONS_JSON_URL = 'https://raw.githubusercontent.com/okclm/TLD-Map-Client/main/regions-to-mapURL.json';
-      const REGIONS_JSON_URL = 'https://okclm.github.io/TLD-Map-Client/wwwroot/regions-to-mapURL.json';
-    const POIS_BASE_URL = 'https://raw.githubusercontent.com/okclm/TLD-Map-Client/main/pois/';
+    <script>
+        // === CONFIG ===
+        const SERVER_URL = 'http://localhost:8080';
+        const REGIONS_JSON_URL = 'https://raw.githubusercontent.com/okclm/TLD-Map-Client/main/regions-to-mapURL.json';
+        const POIS_BASE_URL = 'https://raw.githubusercontent.com/okclm/TLD-Map-Client/main/pois/';
 
-    let currentScene = null;
-    let currentDifficulty = 'easy';
+        let currentScene = null;
+        let currentDifficulty = 'easy';
 
-    // Fetch current scene + difficulty from mod server
-	async function getCurrentGameState() {
-	  try {
-		const res = await fetch(`${SERVER_URL}/scene`);  // ← Changed from /current-scene
-		if (!res.ok) throw new Error(`Server returned ${res.status}`);
-		const data = await res.json();
+        // === Fetch current scene + difficulty from mod ===
+        async function getCurrentGameState() {
+            try {
+                const res = await fetch(`${SERVER_URL}/scene`);
+                if (!res.ok) throw new Error(`Server returned ${res.status}`);
+                const data = await res.json();
 
-		currentScene = data.sceneName;
-		currentDifficulty = data.experienceMode || 'easy';
+                currentScene = data.sceneName;
+                currentDifficulty = data.experienceMode || 'easy';
 
-		if (!currentScene) throw new Error('No scene name received');
+                if (!currentScene) throw new Error('No scene name received');
 
-		document.getElementById('status').textContent =
-		  `Connected → ${currentScene} (${currentDifficulty})`;
-		return true;
-	  } catch (err) {
-		document.getElementById('status').textContent =
-		  `Cannot connect to game (${err.message}). Is the mod running?`;
-		console.error(err);
-		return false;
-	  }
-	}
+                document.getElementById('status').textContent =
+                    `Connected → ${currentScene} (${currentDifficulty})`;
+                return true;
+            } catch (err) {
+                document.getElementById('status').textContent =
+                    `Cannot connect to game (${err.message}). Is the mod running?`;
+                console.error(err);
+                return false;
+            }
+        }
 
-    // === Load map + POIs ===
-    async function loadMapAndPois() {
-      if (!currentScene) return;
+        // === Load map image + POIs for current scene/difficulty ===
+        async function loadMapAndPois() {
+            if (!currentScene) return;
 
-      const svg = document.getElementById('map-svg');
-      svg.innerHTML = ''; // Clear previous content
+            document.getElementById('status').textContent = `Loading ${currentScene} (${currentDifficulty})...`;
 
-      // 1. Load region-to-map mapping
-      let regions;
-      try {
-        regions = await fetch(REGIONS_JSON_URL).then(r => r.json());
-      } catch (err) {
-        document.getElementById('status').textContent = 'Failed to load region map database';
-        return;
-      }
+            const svg = document.getElementById('map-svg');
+            svg.innerHTML = ''; // Clear previous content
 
-      const mapUrl = regions[currentScene]?.[currentDifficulty];
-      if (!mapUrl) {
-        document.getElementById('status').textContent =
-          `No map URL found for ${currentScene} (${currentDifficulty})`;
-        return;
-      }
+            // Load region-to-map mapping
+            let regions;
+            try {
+                regions = await fetch(REGIONS_JSON_URL).then(r => r.json());
+            } catch (err) {
+                document.getElementById('status').textContent = 'Failed to load region map database';
+                return;
+            }
 
-      // 2. Add map image
-      const image = document.createElementNS('http://www.w3.org/2000/svg', 'image');
-      image.setAttribute('href', mapUrl);
-      image.setAttribute('width', '1920');
-      image.setAttribute('height', '1080');
-      image.setAttribute('preserveAspectRatio', 'xMidYMid meet');
-      svg.appendChild(image);
+            const mapUrl = regions[currentScene]?.[currentDifficulty];
+            if (!mapUrl) {
+                document.getElementById('status').textContent =
+                    `No map URL found for ${currentScene} (${currentDifficulty})`;
+                return;
+            }
 
-      // 3. Load POIs for this scene
-      const poisUrl = `${POIS_BASE_URL}${currentScene}.json`;
-      try {
-        const pois = await fetch(poisUrl).then(r => r.json());
+            // Add map image
+            const image = document.createElementNS('http://www.w3.org/2000/svg', 'image');
+            image.setAttribute('href', mapUrl);
+            image.setAttribute('width', '1920');
+            image.setAttribute('height', '1080');
+            image.setAttribute('preserveAspectRatio', 'xMidYMid meet');
+            svg.appendChild(image);
 
-        pois.forEach(poi => {
-          const circle = document.createElementNS('http://www.w3.org/2000/svg', 'circle');
-          circle.setAttribute('cx', poi.svgX || '100');
-          circle.setAttribute('cy', poi.svgY || '100');
-          circle.setAttribute('r', '8');
-          circle.classList.add('poi');
-          circle.onclick = () => teleport(poi.scene || currentScene, poi.x, poi.y, poi.z);
-          circle.title = poi.label || `${poi.x}, ${poi.y}, ${poi.z}`;
-          svg.appendChild(circle);
-        });
+            // Load POIs
+            const poisUrl = `${POIS_BASE_URL}${currentScene}.json`;
+            try {
+                const pois = await fetch(poisUrl).then(r => r.json());
 
-        document.getElementById('status').textContent =
-          `Loaded: ${currentScene} (${currentDifficulty}) — ${pois.length} POIs`;
-      } catch (err) {
-        document.getElementById('status').textContent =
-          `POIs not found for ${currentScene}. Using map only.`;
-        console.warn('POI load failed:', err);
-      }
-    }
+                pois.forEach(poi => {
+                    const circle = document.createElementNS('http://www.w3.org/2000/svg', 'circle');
+                    circle.setAttribute('cx', poi.svgX || '100');
+                    circle.setAttribute('cy', poi.svgY || '100');
+                    circle.setAttribute('r', '8');
+                    circle.classList.add('poi');
 
-    // === Teleport request ===
-    function teleport(scene, x, y, z) {
-      const url = `${SERVER_URL}/teleport?scene=${encodeURIComponent(scene)}&x=${x}&y=${y}&z=${z}`;
-      fetch(url)
-        .then(res => {
-          if (!res.ok) return res.text().then(text => { throw new Error(text); });
-          return res.text();
-        })
-        .then(text => alert('Success: ' + text))
-        .catch(err => {
-          alert('Teleport failed: ' + err.message);
-          if (err.message.includes('Wrong region')) {
-            // Auto-refresh game state
-            loadCurrentGameStateAndMap();
-          }
-        });
-    }
+                    // SVG <desc> for tooltip/description (shows on hover in many viewers)
+                    const desc = document.createElementNS('http://www.w3.org/2000/svg', 'desc');
+                    desc.textContent = poi.label
+                        ? `${poi.label} - ${poi.x.toFixed(2)}, ${poi.y.toFixed(2)}, ${poi.z.toFixed(2)}`
+                        : `POI at ${poi.x.toFixed(2)}, ${poi.y.toFixed(2)}, ${poi.z.toFixed(2)}`;
+                    circle.appendChild(desc);
 
-    // === Main entry point ===
-    async function loadCurrentGameStateAndMap() {
-      const connected = await getCurrentGameState();
-      if (connected) {
-        await loadMapAndPois();
-      }
-    }
+                    // Browser-native title attribute (hover tooltip fallback)
+                    circle.setAttribute('title', desc.textContent);
 
-    // Initial load
-    loadCurrentGameStateAndMap();
+                    circle.onclick = () => teleport(poi.scene || currentScene, poi.x, poi.y, poi.z);
+                    svg.appendChild(circle);
+                });
 
-    // Optional: Refresh every 30 seconds if you want live updates
-    // setInterval(loadCurrentGameStateAndMap, 30000);
-  </script>
+                document.getElementById('status').textContent =
+                    `Loaded: ${currentScene} (${currentDifficulty}) — ${pois.length} POIs`;
+            } catch (err) {
+                document.getElementById('status').textContent =
+                    `POIs not found for ${currentScene}. Using map only.`;
+                console.warn('POI load failed:', err);
+            }
+        }
+
+        // === Send teleport request ===
+        function teleport(scene, x, y, z) {
+            const url = `${SERVER_URL}/teleport?scene=${encodeURIComponent(scene)}&x=${x}&y=${y}&z=${z}`;
+            fetch(url)
+                .then(res => {
+                    if (!res.ok) return res.text().then(text => { throw new Error(text); });
+                    return res.text();
+                })
+                .then(text => alert('Success: ' + text))
+                .catch(err => {
+                    alert('Teleport failed: ' + err.message);
+                    if (err.message.includes('Wrong region')) {
+                        // Auto-refresh game state on mismatch
+                        loadCurrentGameStateAndMap();
+                    }
+                });
+        }
+
+        // === Main entry point ===
+        async function loadCurrentGameStateAndMap() {
+            const connected = await getCurrentGameState();
+            if (connected) {
+                await loadMapAndPois();
+            }
+        }
+
+        // Initial load
+        loadCurrentGameStateAndMap();
+
+        // Optional: Refresh every 30 seconds for live updates (uncomment if desired)
+        // setInterval(loadCurrentGameStateAndMap, 30000);
+    </script>
 </body>
 </html>
