--- a/map.html
+++ b/map.html
@@ -70,8 +70,12 @@
     <script>
         // === CONFIG ===
         const SERVER_URL = 'http://localhost:8080';
-        const REGIONS_JSON_URL = 'https://raw.githubusercontent.com/okclm/TLD-Map-Client/main/regions-to-mapURL.json';
-        const POIS_BASE_URL = 'https://raw.githubusercontent.com/okclm/TLD-Map-Client/main/pois/';
+        const REGIONS_JSON_URL = 'https://okclm.github.io/TLD-Map-Client/regions-to-mapURL.json';
+        const POIS_BASE_URL = 'https://okclm.github.io/TLD-Map-Client/pois/';
+
+        //const REGIONS_JSON_URL = 'https://raw.githubusercontent.com/okclm/TLD-Map-Client/main/regions-to-mapURL.json';
+        //const POIS_BASE_URL = 'https://raw.githubusercontent.com/okclm/TLD-Map-Client/main/pois/';
+        //const POIS_BASE_URL = 'https://okclm.github.io/TLD-Map-Client/wwwroot/MiningRegionMine.json';
 
         let currentScene = null;
         let currentDifficulty = 'easy';
