--- a/map.html
+++ b/map.html
@@ -22,16 +22,22 @@
             justify-content: center;
             align-items: center;
             background: #000;
-            overflow: hidden; /* No scrollbars by default */
-            touch-action: none; /* Improves touch zoom/pan */
+            overflow: hidden;
+            touch-action: none; /* Improves touch experience */
+            cursor: grab; /* Visual hint */
+        }
+
+        #map-container:active {
+            cursor: grabbing; /* When dragging */
         }
 
         #map-svg {
-            transform-origin: center center; /* Zoom from center */
+            transform-origin: center center;
             transition: transform 0.1s ease-out; /* Smooth zoom */
             max-width: 100%;
             max-height: 100%;
             object-fit: contain;
+            user-select: none; /* Prevent text selection while dragging */
         }
 
         .poi {
@@ -123,6 +129,68 @@
             translateX = 0;
             translateY = 0;
             updateTransform();
+        });
+
+        // === DRAG-TO-PAN SUPPORT ===
+        let isDragging = false;
+        let startX = 0;
+        let startY = 0;
+
+        const container = document.getElementById('map-container');
+        const svg = document.getElementById('map-svg');
+
+        // Start drag
+        container.addEventListener('mousedown', (e) => {
+            if (e.button !== 0) return; // Only left button
+            isDragging = true;
+            startX = e.clientX - translateX;
+            startY = e.clientY - translateY;
+            container.style.cursor = 'grabbing';
+            e.preventDefault();
+        });
+
+        // Move while dragging
+        container.addEventListener('mousemove', (e) => {
+            if (!isDragging) return;
+            translateX = e.clientX - startX;
+            translateY = e.clientY - startY;
+            updateTransform();
+            e.preventDefault();
+        });
+
+        // Stop drag
+        document.addEventListener('mouseup', () => {
+            if (isDragging) {
+                isDragging = false;
+                container.style.cursor = 'grab';
+            }
+        });
+        document.addEventListener('mouseleave', () => {
+            if (isDragging) {
+                isDragging = false;
+                container.style.cursor = 'grab';
+            }
+        });
+
+        // Optional: Touch support (basic drag on mobile)
+        container.addEventListener('touchstart', (e) => {
+            if (e.touches.length !== 1) return;
+            isDragging = true;
+            startX = e.touches[0].clientX - translateX;
+            startY = e.touches[0].clientY - translateY;
+            e.preventDefault();
+        });
+
+        container.addEventListener('touchmove', (e) => {
+            if (!isDragging || e.touches.length !== 1) return;
+            translateX = e.touches[0].clientX - startX;
+            translateY = e.touches[0].clientY - startY;
+            updateTransform();
+            e.preventDefault();
+        });
+
+        container.addEventListener('touchend', () => {
+            isDragging = false;
         });
 
         // === Fetch current scene + difficulty from mod ===
