--- a/map.html
+++ b/map.html
@@ -204,9 +204,10 @@
                 currentDifficulty = data.experienceMode || 'easy';
 
                 // This is where you can hardcode for testing:
-                currentScene = 'LakeRegion';
-                currentDifficulty = 'easy';
-                // currentDifficulty = 'hard';
+                //currentScene = 'LakeRegion';
+                currentScene = 'CanneryRegion';
+                //currentDifficulty = 'easy';
+                 currentDifficulty = 'hard';
 
                 if (!currentScene) throw new Error('No scene name received');
 
